infra/istio/security/kafka-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: kafka-permissive
  namespace: kafka
spec:
  mtls:
    mode: PERMISSIVE
